<resources>
    <string name="app_name">BookMyTable</string>
    <string name="title_activity_phone_auth">PhoneAuthActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="otp">OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="username">Username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_profile">Profile</string>
    <string name="title_booking">Booking</string>
    <string name="long_dummy_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.</string>
    <string name="available_table">Available Table</string>
    <string name="d_pizza_house">D Pizza House</string>
    <string name="fatehgung_vadodara">Fatehgung, Vadodara</string>
    <string name="dummy_time">08:00 AM - 11:35 PM</string>
    <string name="dummy_type">2 SEATER</string>
    <string name="thank_you">Thank you</string>
    <string name="transaction_details">Receipt</string>

    <string name="dot">•</string>
    <string name="made_in_india">Made In India ❤</string>
    <string name="get_started">Get Started</string>
    <string name="main_headline">Book table in your favourite restaurants?</string>

    <string name="slide_1_title">Delivered quickly to \n your doorstep</string>
    <string name="slide_2_title">Order from a wide range\n of restaurants</string>
    <string name="slide_3_title">With a wide collection\n of cuisines</string>

    <string name="log_in">LOG IN</string>
    <string name="enter_your_phone_number_to_proceed">Enter your phone number to proceed</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="enter_phone_number">ENTER PHONE NUMBER</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="otp_sent_to_917573056506">OTP Sent to +917573056506</string>
    <string name="resend">RESEND</string>
    <string name="VERIFY_OTP">ENTER OTP</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="login">LOGIN</string>
    <string name="enter_the_username">Enter Username</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email">Email</string>
    <string name="enter_location">Enter Location</string>
    <string name="location">Location</string>

    <string name="term_link">https://www.google.com/</string>
    <string name="policy_link">https://www.google.com/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tables">Tables</string>
    <string name="restaurant_profile">Restaurant Profile</string>
    <string name="enter_restaurant_name">Enter Restaurant Name</string>
    <string name="enter_restaurant_short_description">Enter Restaurant Short Description</string>
    <string name="restaurant_short_description">Restaurant Short Description</string>
    <string name="enter_restaurant_long_description">Enter Restaurant Long Description</string>
    <string name="restaurant_long_description">Restaurant Long Description</string>
    <string name="create_restaurant">Create Restaurant</string>
    <string name="enter_restaurant_phone_number">Enter Restaurant Phone Number</string>
    <string name="restaurant_phone_number">Restaurant Phone Number</string>
    <string name="restaurant_timing">Restaurant Timing</string>
    <string name="add_table">Add Table</string>\
</resources>