<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/create_restaurant_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/create_restaurant"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_restaurant_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRestaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/enter_restaurant_name"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/enter_restaurant_short_description"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRestaurantShortDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/restaurant_short_description"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/enter_restaurant_long_description"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp"
          />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRestaurantLongDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/restaurant_long_description"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/enter_restaurant_phone_number"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRestaurantPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/restaurant_phone_number"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/restaurant_timing"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/bg_theme_corner"
                android:text="Start Time"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp" />

            <View
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/tvEndTime"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/bg_theme_corner"
                android:text="End Time"
                android:textColor="@color/white"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/enter_location"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp"
             />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/location"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/create_restaurant"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_10sdp" />
    </LinearLayout>
</ScrollView>