<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/log_in_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_username"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="@+id/log_in_label"
            app:layout_constraintTop_toBottomOf="@+id/log_in_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUsername"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Enter Email"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="@+id/UserNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/UserNameLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/enter_location"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="@+id/EmailNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/EmailNameLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayoutHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_theme_corner"
                android:hint="@string/location"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/locationLayout"
            app:layout_constraintStart_toStartOf="@+id/locationLayout"
            app:layout_constraintTop_toBottomOf="@+id/locationLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>