<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Intro_A.IntroActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/layoutDots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dot_0"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dot"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_38ssp" />

                <TextView
                    android:id="@+id/dot_1"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/dot"
                    android:textSize="@dimen/_38ssp" />

                <TextView
                    android:id="@+id/dot_2"
                    android:layout_width="18dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/dot"
                    android:textSize="@dimen/_38ssp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/main_headline"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/getstarted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_margin="@dimen/_16sdp"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_onboarding"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/get_started"
                android:textColor="#000"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/made_in_india"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>